feat: "구매 금액만큼 발행한 로또 "수량"과 "번호"를 출력" 기능 구현